# My_Jarvis

./: README.md  pyproject.toml  Диаграмма без названия.drawio
core/: main.py  skills_of_bot.py  speach_recognition.py
settings/: commands.py  config.py
